WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 245606
When creating a matrix3d() value the tz component does not account for zoom
https://bugs.webkit.org/show_bug.cgi?id=245606
Summary
When creating a matrix3d() value the tz component does not account for zoom
Antoine Quint
Reported
2022-09-23 15:22:48 PDT
In transformsForValue() in the matrix3d() case, we account for zoom for tx and ty, but not for tz, although we do when parsing translateZ().
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2022-09-23 15:27:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4651
EWS
Comment 2
2022-09-24 00:51:19 PDT
Committed
254823@main
(a32f83928115): <
https://commits.webkit.org/254823@main
> Reviewed commits have been landed. Closing PR #4651 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-24 00:52:18 PDT
<
rdar://problem/100355344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug