When creating a matrix3d() value the tz component does not account for zoom https://bugs.webkit.org/show_bug.cgi?id=245606

Reviewed by Tim Nguyen.

Inside transformsForValue(), in the matrix3d() case, we account for zoom for tx and ty,
but not for tz, although we do when parsing translateZ(). We rectify this and fix the
final subtest of css/css-transforms/animation/transform-interpolation-computed-value.html
thus fixing bug 235807.

* LayoutTests/imported/w3c/web-platform-tests/css/css-transforms/animation/transform-interpolation-computed-value-expected.txt:
* Source/WebCore/css/TransformFunctions.cpp:
(WebCore::transformsForValue):

Canonical link: https://commits.webkit.org/254823@main